--- a/griding.html
+++ b/griding.html
@@ -5,7 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CSS Grid Example</title>
   <style>
-  
+   .grid-container{
+    display: grid | inline-grid;
+   }
+   .grid-item{
+
+   }
   </style>
 </head>
 <body>
