--- a/griding.html
+++ b/griding.html
@@ -6,10 +6,13 @@
   <title>CSS Grid Example</title>
   <style>
    .grid-container{
-    display: grid | inline-grid;
+    display: grid;
+  grid-template-columns:  repeat(3, 1fr);
+  background-color: white;
+  gap: 10px;
    }
    .grid-item{
-
+     background-color: whitesmoke;
    }
   </style>
 </head>
