--- a/flexbox.html
+++ b/flexbox.html
@@ -21,7 +21,7 @@
     flex-shrink: 4;
     flex-basis: auto;
     align-self: center;
-    /* visual stying*/
+    /* how  to see changes*/
     background-color: coral;
     border: 2px dashed green;
     padding: 20px;
