--- a/flexboxExercise.html
+++ b/flexboxExercise.html
@@ -19,7 +19,7 @@
         flex-direction: row;
         justify-content: center;
         /* works for a single  element  */
-        align-items: center;
+        align-items: flex-start;
       }
       .item {
         /* for flexbos  we  focus on item how  they will fit in the our box  */
@@ -28,6 +28,9 @@
         font-size: 35px;
         padding: 20px;
         margin: 10px;
+      }
+      .items-2 {
+        height: 150px;
       }
     </style>
   </head>
