--- a/flexboxExercise.html
+++ b/flexboxExercise.html
@@ -20,6 +20,8 @@
         justify-content: center;
         /* works for a single  element  */
         align-items: flex-start;
+        flex-wrap: nowrap;
+        align-content: flex-startv;
       }
       .item {
         /* for flexbos  we  focus on item how  they will fit in the our box  */
@@ -30,7 +32,7 @@
         margin: 10px;
         flex-grow: 1;
         /*  we  gona use shorthnd property   */
-      }
+      /* }
       .items-2 {
         order: 4;
       }
@@ -51,7 +53,7 @@
       .items-5 {
         /* align-self: flex-end; */
         order: 2;
-      }
+      } */
     </style>
   </head>
   <body>
@@ -61,6 +63,11 @@
       <div class="items-3 item">3</div>
       <div class="items-4 item">4</div>
       <div class="items-5 item">5</div>
+      <div class="items-6 item">6</div>
+      <div class="items-7 item">7</div>
+      <div class="items-8 item">8</div>
+      <div class="items-9 item">9</div>
+      <div class="items-10 item">10</div>
     </div>
   </body>
 </html>
