--- a/flexboxExercise.html
+++ b/flexboxExercise.html
@@ -20,8 +20,8 @@
         justify-content: center;
         /* works for a single  element  */
         align-items: flex-start;
-        flex-wrap: nowrap;
-        align-content: flex-startv;
+        flex-wrap: wrap;
+        align-content: flex-start;
       }
       .item {
         /* for flexbos  we  focus on item how  they will fit in the our box  */
