--- a/gridingExercise.html
+++ b/gridingExercise.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      * {
+        padding: 0;
+        margin: 0;
+      }
+
+      .container {
+        display: grid;
+        grid-template-columns: 100px auto 100px;
+        /* grid-template-rows: 50px 50px 20px; */
+        background-color: white;
+        grid-gap: 20px;
+      }
+      .item {
+        background-color: blue;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
@@ -12,6 +29,7 @@
       <div class="items-3 item">3</div>
       <div class="items-4 item">4</div>
       <div class="items-5 item">5</div>
+      <div class="items-6 item">6</div>
     </div>
   </body>
 </html>
