--- a/positioning.html
+++ b/positioning.html
@@ -10,7 +10,7 @@
         margin: 0;
       }
       .container {
-        height: 100vh;
+        height: vh;
         background-color: black;
         position: relative;
       }
