--- a/positioningExercise.html
+++ b/positioningExercise.html
@@ -4,14 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      .parent {
+        height: 200vh;
+        position: relative;
+        background-color: bisque;
+      }
+      .child {
+        position: fixed;
+        background-color: aqua;
+        left: 50px;
+        height: 80px;
+        width: 50px;
+      }
+    </style>
   </head>
   <body>
-    <container>
-      <div class="item-1 item"></div>
-      <div class="item-2 item"></div>
-      <div class="item-3 item"></div>
-      <div class="item-4 item"></div>
-      <div class="item-5 item"></div>
-    </container>
+    <div class="parent">
+      <nav class="child"></nav>
+    </div>
   </body>
 </html>
